--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "authentication",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "app.js"
   },
   "author": "Jonathan",
   "license": "ISC",
